# 2026_laglitsynth

./: .env.example  .gitignore  .tmp-stage8-parcels-input.txt  .tmp-stage8-parcels-opus.json  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: README.md  adjudication-extraction.md  adjudication-screening.md  bake-model.md  catalogue-dedup.md  catalogue-fetch.md  codebook.md  configs.md  data-layout.md  data-model.md  deduplication.md  eligibility.md  external-services.md  extraction-codebook.md  fetch-publications.md  filter-abstracts.md  full-text-extraction.md  full-text-retrieval.md  fulltext-extraction.md  fulltext-retrieval.md  glossary.md  grobid-lessons.md  interfaces.md  llm-concurrency.md  mission.md  objectives.md  openalex-fetch.md  pipeline.md  screening-abstracts.md  screening-adjudication.md  two-pass-extraction.md  vocabulary.md
plans/: README.md  adjudication-extraction.md  adjudication-screening.md  codebook.md  deduplication.md  eligibility.md  flag-dont-filter-cutover.md  full-text-extraction.md  full-text-retrieval-a.md  full-text-retrieval-b.md  full-text-retrieval-c.md  full-text-retrieval.md  implementation-challenges.md  llmfilter.md  multi-run-consensus.md  ollama-num-ctx-per-model.md  openalex-to-jsonl.md  pipeline-proposal-c.md  pipeline.md  pr3-review-comments.md  pr3-review-themes.md  pre-prod-cleanup.md  review-2026-04-16-system.md  review-2026-04-16.md  roadmap.md  stage-5-6-bugs.md  stage-7-fulltext-eligibility.md  stage-8-extraction-codebook.md  stages-4-5-plumbing.md  tei-wrapper.md  two-pass-extraction.md  usability-cli.md  usability-docs.md  verdicts-only-cutover.md
scripts/: bench-ollama-concurrency.py  bench-ollama-concurrency.sbatch  bench-ollama-h100-flashattn.sbatch  bench-ollama-h100-long-prompt.sbatch  bench-ollama-h100-tei.sbatch  bench-ollama-multi-gpu.sbatch  bench-ollama-v100-tei.sbatch  bench-ollama.sbatch  nesh-pipeline.sbatch  run-pipeline.sh  (+2 more)
(+94 files in other folders)
