[project]
name = "laglitsynth"
version = "0.1.0"
description = "Literature review pipeline — from keyword search to structured synthesis"
requires-python = ">= 3.12"
dependencies = [
    "pyalex>=0.16",
    "pydantic>=2.0",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64"]

[tool.pixi.pypi-dependencies]
laglitsynth = { path = ".", editable = true, extras = ["test"] }

[tool.pixi.tasks]
fetch-publications = { cmd = "python -m laglitsynth.openalex.fetch", description = "Fetch publications from OpenAlex" }
test = { cmd = "pytest --cov=laglitsynth --cov-report=term-missing", description = "Run tests" }
