[project]
name = "laglitsynth"
version = "0.1.0"
description = "Literature review pipeline — from keyword search to structured synthesis"
requires-python = ">= 3.12"
dependencies = [
    "openai",
    "pyalex>=0.16",
    "pydantic>=2.0",
    "python-dotenv",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
typecheck = ["mypy"]

[project.scripts]
laglitsynth = "laglitsynth.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64", "linux-aarch64", "win-64"]

[tool.pixi.pypi-dependencies]
laglitsynth = { path = ".", editable = true, extras = ["test", "typecheck"] }

[tool.pixi.tasks]
test = { cmd = "pytest --cov=laglitsynth --cov-report=term-missing", description = "Run tests" }
typecheck = { cmd = "mypy --strict src/", description = "Run type checker" }

[tool.mypy]
[[tool.mypy.overrides]]
module = ["pyalex", "pyalex.*"]
ignore_missing_imports = true
